--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>BYD Bac Ninh Domain for Sale/Investment</h1>
     <div class="contact-info">
       📧 Email: taileebizman@gmail.com <br>
-      📞 Phone: +84 0359321210
+      📞 Phone: 0797966515
     </div>
     <p>This domain is perfect for businesses or investors looking to establish an online presence around BYD's operations in Bac Ninh, Vietnam.</p>
   </div>
