--- a/index.html
+++ b/index.html
@@ -6,31 +6,107 @@
   <meta name="description" content="Buy or invest in the premium domain bydbacninh.com or bydbacninh.com.vn or bydbacninh.vn related to BYD Bac Ninh.">
   <meta name="keywords" content="BYD Bac Ninh, domain for sale, invest, byd, Bac Ninh">
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: sans-serif;
-      background: #f4f4f4;
+      padding: 0;
+      box-sizing: border-box;
     }
-    .banner {
-      background: #2d2d2d;
+    body {
+      font-family: Arial, sans-serif;
+      background: url('background.jpg') no-repeat center center/cover;
+      color: white;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      background-color: rgba(0, 0, 0, 0.6);
+      background-image: url('https://www.byd.com/content/dam/byd-site/eu/product/atto3/atto3_v2/Section02_PC.jpg');
+      background-size: cover;
+      background-attachment: fixed; /* Makes the image fixed relative to the viewport */
+      display: flex;
+      padding: 40px;
+      border-radius: 10px;
+      max-width: 1000px;
+      width: 100%;
+      gap: 40px;
+    }
+    .left {
+      flex: 2;
+    }
+    .left h1 {
+      font-size: 36px;
+      margin-bottom: 20px;
+      margin-left: 20px;
+    }
+    .left h2 {
+      font-size: 48px;
+      font-weight: bold;
       color: #fff;
-      text-align: center;
-      padding: 2rem;
+      margin-bottom: 20px;
+    }
+    .left p {
+      margin: 10px 0;
+      font-size: 16px;
     }
     .contact-info {
-      font-size: 1.2rem;
-      margin-top: 1rem;
+      margin-top: 30px;
+    }
+    .contact-info span {
+      display: inline-block;
+      margin-right: 20px;
+    }
+    .right {
+      flex: 1;
+      background-color: white;
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .right h3 {
+      margin-bottom: 20px;
+      font-size: 20px;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    input[type="text"],
+    input[type="email"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .submit-btn {
+      width: 100%;
+      padding: 12px;
+      background-color: #007BFF;
+      border: none;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="banner">
-    <h1>BYD Bac Ninh Domain for Sale/Investment</h1>
-    <div class="contact-info">
-      📧 Email: taileebizman@gmail.com <br>
-      📞 Phone: 0797966515
+  <div class="container">
+    <div class="left">
+      <h2>BYD Bac Ninh Domain for Sale/Investment</h2>
+      <h1>→ bydbacninh.com</h1>      
+      <h1>→ bydbacninh.com.vn</h1>      
+      <h1>→ bydbacninh.vn</h1>      
+      <p><strong>Hurry up. Only $1999 for 3 domains</strong></p>
+      <p></p>
+      <div class="contact-info">
+        <span>📞 Phone: 0797966515</span>
+        <span>✉️ Email: taileebizman@gmail.com</span>
+      </div>
     </div>
-    <p>This domain is perfect for businesses or investors looking to establish an online presence around BYD's operations in Bac Ninh, Vietnam.</p>
+    
   </div>
 </body>
 </html>
