--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
   <body>
     <div class="container">
       <div class="left">
-        <h2>BYD Bac Ninh Domain for Sale/Investment</h2>
+        <h2>Bán tên miền BYD Bắc Ninh </h2>
         <h1>→ bydbacninh.com</h1>
         <h1>→ bydbacninh.com.vn</h1>
         <h1>→ bydbacninh.vn</h1>
-        <p><strong>Hurry up. Only $1999 for 3 domains</strong></p>
+        <p><strong>Chỉ $1.999 cho 3 tên miền</strong></p>
         <div class="contact-info">
-          <span>📞 Phone: 0797966515</span>
+          <span>📞 Điện thoại: 0797966515</span>
           <span>✉️ Email: taileebizman@gmail.com</span>
         </div>
       </div>
