--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>BYD Bac Ninh Domain for Sale or Investment</title>
+    <title>Bán tên miền BYD Bắc Ninh</title>
     <meta
       name="description"
-      content="Buy or invest in the premium domain bydbacninh.com or bydbacninh.com.vn or bydbacninh.vn related to BYD Bac Ninh."
+      content="Mua hoặc đầu tư tên miền bydbacninh.com, bydbacninh.com.vn, bydbacninh.vn."
     />
     <meta
       name="keywords"
-      content="BYD Bac Ninh, domain for sale, invest, byd, Bac Ninh"
+      content="BYD Bac Ninh, mua, bán, đầu tư, tên miền, byd, Bắc Ninh"
     />
     <style>
       * {
