--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p><strong>Chỉ $1.999 cho 3 tên miền</strong></p>
         <div class="contact-info">
           <span>📞 Điện thoại: 0797966515</span>
-          <span>✉️ Email: taileebizman@gmail.com</span>
+          <span>✉️ Email: tailewingman@gmail.com</span>
         </div>
       </div>
     </div>
